// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allowToChangeInstallationDirectory 1`] = `
Array [
  "Test Custom Installation Dir Setup 1.1.0.exe",
]
`;

exports[`allowToChangeInstallationDirectory 2`] = `
Array [
  "test-custom-inst-dir-Setup-1.1.0.exe",
]
`;

exports[`allowToChangeInstallationDirectory 3`] = `
Object {
  "owner": "foo",
  "provider": "github",
  "repo": "bar",
}
`;

exports[`allowToChangeInstallationDirectory 4`] = `
Object {
  "githubArtifactName": "test-custom-inst-dir-Setup-1.1.0.exe",
  "path": "Test Custom Installation Dir Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`boring 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`boring 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`boring, only perMachine 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`boring, only perMachine 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;
